--- a/AssignNet2/Booking.com.csproj
+++ b/AssignNet2/Booking.com.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="bin\Debug\net7.0-windows\airline_details.txt" />
+    <None Include="bin\Debug\net7.0-windows\bookings_details.db" />
     <None Include="bin\Debug\net7.0-windows\hotel_details.txt" />
     <None Include="bin\Debug\net7.0-windows\user_details.txt" />
   </ItemGroup>
